--- a/docs/static/manifest.json
+++ b/docs/static/manifest.json
@@ -1,57 +1,57 @@
 {
   "icons": [
     {
-      "src": "/static/img/icons/icon_1024x1024.png",
+      "src": "/g.amphibian-investigation.pwa/static/img/icons/icon_1024x1024.png",
       "sizes": "1024x1024",
       "type": "image/png"
     },
     {
-      "src": "/static/img/icons/icon_512x512.png",
+      "src": "/g.amphibian-investigation.pwa/static/img/icons/icon_512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "/static/img/icons/icon_384x384.png",
+      "src": "/g.amphibian-investigation.pwa/static/img/icons/icon_384x384.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "/static/img/icons/icon_192x192.png",
+      "src": "/g.amphibian-investigation.pwa/static/img/icons/icon_192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/static/img/icons/icon_152x152.png",
+      "src": "/g.amphibian-investigation.pwa/static/img/icons/icon_152x152.png",
       "sizes": "152x152",
       "type": "image/png"
     },
     {
-      "src": "/static/img/icons/icon_144x144.png",
+      "src": "/g.amphibian-investigation.pwa/static/img/icons/icon_144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "/static/img/icons/icon_128x128.png",
+      "src": "/g.amphibian-investigation.pwa/static/img/icons/icon_128x128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "/static/img/icons/icon_96x96.png",
+      "src": "/g.amphibian-investigation.pwa/static/img/icons/icon_96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "/static/img/icons/icon_72x72.png",
+      "src": "/g.amphibian-investigation.pwa/static/img/icons/icon_72x72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "/static/img/icons/icon_32x32.png",
+      "src": "/g.amphibian-investigation.pwa/static/img/icons/icon_32x32.png",
       "sizes": "32x32",
       "type": "image/png"
     },
     {
-      "src": "/static/img/icons/icon_16x16.png",
+      "src": "/g.amphibian-investigation.pwa/static/img/icons/icon_16x16.png",
       "sizes": "16x16",
       "type": "image/png"
     }
@@ -59,7 +59,7 @@
   "name": "Amphibian Investigation",
   "short_name": "Amphibian Investigation",
   "display": "standalone",
-  "start_url": "/",
+  "start_url": "/g.amphibian-investigation.pwa/",
   "theme_color": "#384148",
   "background_color": "#384148"
 }
