--- a/package.json
+++ b/package.json
@@ -65,13 +65,13 @@
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-url": "^8.0.0",
-    "pug": "^2.0.4",
-    "pug-loader": "^2.4.0",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0",
     "rimraf": "^2.7.1",
     "semver": "^5.7.1",
     "shelljs": "^0.8.4",
     "style-loader": "^0.23.1",
-    "stylus": "^0.54.8",
+    "stylus": "^0.59.0",
     "stylus-loader": "^3.0.2",
     "sw-precache-webpack-plugin": "^0.11.5",
     "uglify-es": "^3.3.9",
